# softemu

./: .gitignore  AGENTS.md  Cargo.toml  MMIO_TESTING.md  README.md  standalone_simple
benches/: cpu_bench.rs
example_programs/: Cargo.toml  build.rs
example_programs/.cargo/: config.toml
example_programs/kernel/: Cargo.toml
example_programs/kernel/src/: main.rs
example_programs/simple_kernel/: Cargo.toml  build.rs  linker.ld
example_programs/simple_kernel/.cargo/: config.toml
example_programs/simple_kernel/src/: main.rs  uart.rs
examples/: basic_vm.rs  memory_only.rs  memory_routing.rs  network_vm.rs  paging_test.rs  serial_console.rs  simple_paging_test.rs  simple_vm.rs  standalone_memory.rs  standalone_simple.rs
src/: lib.rs  main.rs
src/acpi/: device.rs  manager.rs  mod.rs  power.rs  tables.rs
src/cpu/: core.rs  fault.rs  instruction.rs  mod.rs  prefix.rs  registers.rs  state.rs
src/cpu/instruction/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  mod.rs  n.rs  o.rs  p.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs  x.rs  z.rs
src/cpu/instruction/virtual8086_mode/: atomic.rs  control_flow.rs  core.rs  crypto.rs  data_movement.rs  fpu.rs  integer.rs  legacy.rs  memory.rs  mod.rs  nop.rs  simd.rs  system.rs  virtualization.rs
src/cpu/instruction/x16_protected_mode/: atomic.rs  core.rs  data_movement.rs  fpu.rs  integer.rs  io_port.rs  simd.rs  string.rs  system.rs  threednow.rs  virtualization.rs
src/cpu/instruction/x16_real_mode/: control_flow.rs  core.rs  crypto.rs  data_movement.rs  integer.rs  memory.rs  nop.rs  string.rs  threednow.rs  virtualization.rs
src/cpu/instruction/x32_mode/: atomic.rs  control_flow.rs  core.rs  crypto.rs  data_movement.rs  fpu.rs  integer.rs  io_port.rs  legacy.rs  memory.rs  nop.rs  simd.rs  string.rs  system.rs  threednow.rs
src/cpu/instruction/x64_mode/: atomic.rs  control_flow.rs  core.rs  crypto.rs  data_movement.rs  fpu.rs  integer.rs  legacy.rs  memory.rs  nop.rs  simd.rs  string.rs  system.rs  threednow.rs  virtualization.rs
src/devices/: console.rs  interrupt.rs  mod.rs  timer.rs
src/memory/: guest_memory.rs  manager.rs  mmio.rs  mod.rs  page_allocator.rs  page_fault.rs  paging.rs
src/network/: device.rs  manager.rs  mod.rs
src/test/: helpers.rs  mmio.rs  mod.rs  simple_mmio_tests.rs
src/test/acpi/: manager.rs
src/test/cpu/instruction/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  mod.rs  n.rs  o.rs  p.rs  r.rs  s.rs  t.rs  u.rs  v.rs  w.rs  x.rs
src/test/memory/: page_allocator.rs
src/test/vm/: virtual_machine.rs
src/vm/: mod.rs  virtual_machine.rs
