[package]
name = "softemu"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A software-based x86_64 emulator without hardware virtualization"
license = "MIT"
repository = "https://github.com/yourusername/softemu"

[dependencies]
# Core VM dependencies
vm-memory = { version = "0.16", features = ["backend-mmap"] }
vm-device = "0.1"
linux-loader = "0.13"
memfd = "0.1"
iced-x86 = { version = "1.21", features = ["exhaustive_enums"] }
vm-allocator = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Networking
pnet = "0.34"

# File I/O
memmap2 = "0.9"

# Cross-platform compatibility
libc = "0.2"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Bit manipulation
bitflags = "2.0"

# Threading
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["x64_mode", "default_opcodes"]
x16_real_mode = []
x16_protected_mode = []
x32_mode = []
x64_mode = []
virtual8086_mode = []


default_opcodes = [
    "control_flow_opcodes",
    "core_opcodes",
    "data_movement_opcodes",
    "fpu_opcodes",
    "integer_opcodes",
    "memory_opcodes",
    "nop_opcodes", 
    "string_opcodes",
    "system_opcodes",
]

atomic_opcodes = []
control_flow_opcodes = []
core_opcodes = []
crypto_opcodes = []
data_movement_opcodes = []
fpu_opcodes = []
integer_opcodes = []
io_port_opcodes = []
legacy_opcodes = []
memory_opcodes = []
nop_opcodes = []
simd_opcodes = []
string_opcodes = []
system_opcodes = []
threednow_opcodes = []
virtualization_opcodes = []